@@ -5,6 +5,9 @@ NEW FEATURES
 - on 404 (page not found), 404.html will be displayed if it exists under the
   root directory
 
+- improved the support for HTTP Range requests, e.g. servr can correctly serve
+  MP4 videos now in major browsers including Safari
+
 		 CHANGES IN servr VERSION 0.5
 
 NEW FEATURES
